# NILA-BBV

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  ai-code-generation-guide-design.md  ai-code-generation-guide-one-page-checklist.md  ai-code-generation-guide-writing-plan.md  ai-code-generation-guide.md  ai-code-generation-phase-0-checklist.md  ai-code-generation-phase-1-checklist.md  ai-code-generation-phase-2-checklist.md  ai-code-generation-phase-3-checklist.md  ai-code-generation-phase-4-checklist.md  ai-code-generation-phase-5-checklist.md  ai-code-generation-phase-6-checklist.md  ai-code-generation-phase-7-checklist.md  ai-code-generation-phase-checklists-index.md  deep-research-report-2.md  pyproject.toml
configs/attacks/: main.yaml  suite.yaml
configs/eval/: fpr.yaml  main.yaml  verification.yaml
configs/report/: build.yaml  main.yaml
configs/train/: fedavg.yaml  main.yaml  smoke.yaml  watermark_baseline.yaml
docs/: paper-minimum-experiment-matrix.md
scripts/attacks/: run_attack_suite.py
scripts/data/: prepare_femnist.py  prepare_leaf_common.py  prepare_leaf_datasets.py  prepare_sent140.py
scripts/eval/: run_commitment_audit.py  run_fpr_evaluation.py  run_full_accuracy.py  run_query_filter_calibration.py  run_verification.py
scripts/paper/: plot_figures.py
scripts/report/: build_report.py
scripts/train/: run_fedavg.py  run_smoke.py  run_watermark_baseline.py
src/bbv/: __init__.py
tests/integration/: test_allocation_pipeline.py  test_allocation_with_real_clients.py  test_attack_pipeline.py  test_attack_verification_regression.py  (+14 more)
(+117 files in other folders)
