[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bbv"
version = "0.1.0"
description = "Research scaffold for non-IID adaptive black-box copyright verification in federated learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3,<2.0",
  "numpy>=1.26,<3.0",
  "torch>=2.2,<3.0",
  "torchvision>=0.17,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
